# kompy

./: .gitignore  README.md  pyproject.toml
kompy/: __init__.py  __main__.py  _core.py  _orm.py  _settings.py
