[tool.poetry]
name = "kompy"
version = "0.1.0"
description = "CLI tool to interact with NI Komplete library"
authors = ["Félix Voituret <fvoituret@deezer.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
typer = "^0.4.0"
sqlacodegen = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
